objects/Traver_Project__c.object
<CustomObject>
    <description>Project/Product object used by Traver Technologies</description>
    <fields>
        <fullName>APPT_Board_Ordered__c</fullName>
        <formula>APPT_Board_Tracking_Number__c &lt;&gt; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APPT Board Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPT_Board_Tracking_Number__c</fullName>
        <label>APPT Board Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>if(LEN(Account__r.BillingStreet)&gt;0, Account__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp;&quot;,&quot; &amp;
if(LEN(Account__r.BillingCity)&gt;0, Account__r.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingState)&gt;0, Account__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingPostalCode)&gt;0, Account__r.BillingPostalCode,&quot;&quot;)</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Fax_Number__c</fullName>
        <formula>Account__r.Fax</formula>
        <label>Account Fax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Traver Projects</relationshipLabel>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appt_Ratio_Sales__c</fullName>
        <label>Appt. Ratio - Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_Ratio_Service__c</fullName>
        <label>Appt. Ratio - Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_fill_Rate__c</fullName>
        <label>Appt. fill Rate %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAC__c</fullName>
        <formula>Account__r.BAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDI_Data__c</fullName>
        <inlineHelpText>Number of Consecutive Days BDI data has been entered</inlineHelpText>
        <label>BDI Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOU_Completion__c</fullName>
        <inlineHelpText>% of Students Completed in Initial PEP</inlineHelpText>
        <label>BOU Completion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <description>Traver field</description>
        <label>Billing Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <formula>TEXT ( Account__r.CRM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated from Account record field</inlineHelpText>
        <label>CRM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_contract_uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CSR contract Uploaded checked when CSR upload task Completed</inlineHelpText>
        <label>CSR contract uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Substatus__c</fullName>
        <label>Cancelled Substatus</label>
        <picklist>
            <picklistValues>
                <fullName>Did not engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No value in onsite training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No value in virtual coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t see the value in onsite and virtual support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing related reasons (not budgetary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Would not disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract End of Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Ratio__c</fullName>
        <label>Appt. Close Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conf_Ratio__c</fullName>
        <label>Conf. Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Traver Projects</relationshipLabel>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Date__c</fullName>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field input comes from Project Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Date__c</fullName>
        <formula>Project_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic GM Program 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic GM Program 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic GM Program 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Svs Non GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP Training Svc&apos;s (non-GM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS1 - GM Pgm - 4 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS1 Non-GM - 4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS2 - GM Pgm - 12 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS2 Non-GM - 12 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS3 - GM Pgm - 24 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTS3 Non-GM - 24 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non GM Contract</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courses_Completed_Last_30_Days__c</fullName>
        <label>Courses Completed Last 30 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courses_Completed__c</fullName>
        <label>Courses Completed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <formula>TEXT ( Account__r.DMS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated from Account Record</inlineHelpText>
        <label>DMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Overview__c</fullName>
        <inlineHelpText>Import field</inlineHelpText>
        <label>DM Overview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Per_Month_Number__c</fullName>
        <formula>IF(ISPICKVAL( Days_Per_Month__c, &quot;1&quot;), 1, 
IF(ISPICKVAL( Days_Per_Month__c, &quot;2&quot;), 2,
IF(ISPICKVAL( Days_Per_Month__c, &quot;3&quot;), 3,
IF(ISPICKVAL( Days_Per_Month__c, &quot;4&quot;), 4, 
IF(ISPICKVAL( Days_Per_Month__c, &quot;0&quot;), 0, 
IF(ISPICKVAL( Days_Per_Month__c, &quot;0.33&quot;), 0.33, 0))))))</formula>
        <label>Days Per Month Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Per_Month__c</fullName>
        <inlineHelpText>Days Training Per Month</inlineHelpText>
        <label>Days Per Month</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Import field</inlineHelpText>
        <label>EO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC_Assigned__c</fullName>
        <formula>EPC__c&lt;&gt; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC_Intro_Call__c</fullName>
        <inlineHelpText>Box checked when EPC Intro Call Completed</inlineHelpText>
        <label>EPC Intro Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Store_Visit_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Store Visit Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Upfront__c</fullName>
        <label>Initial Upfront</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_DOS__c</fullName>
        <formula>Account__r.Key_DOS__r.FirstName&amp;&quot; &quot;&amp;Account__r.Key_DOS__r.LastName</formula>
        <label>Key DOS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <formula>Account__r.Key_Rep__r.FirstName&amp;&quot; &quot;&amp;Account__r.Key_Rep__r.LastName</formula>
        <label>Key Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <label>Kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Date__c</fullName>
        <label>Last Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Traver</description>
        <inlineHelpText>Import record field.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lets_Get_Started__c</fullName>
        <description>Traver</description>
        <inlineHelpText>Traver field to trigger work flow task creation of Let&apos;s get Started process</inlineHelpText>
        <label>Lets Get Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MGR_Enrolled_in_boot_camp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box Updated when MGR Enrolled in Boot Camp Updated</inlineHelpText>
        <label>MGR Enrolled in boot camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Used__c</fullName>
        <label>Onsite Days Used</label>
        <summarizedField>Traver_Coaching__c.Number_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Traver_Coaching__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Traver_Coaching__c.Traver_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partial_Month_Monday_Start__c</fullName>
        <inlineHelpText>Partial Month Process - Date of Next Monday to start the EPC task processes, emails and text.</inlineHelpText>
        <label>Partial Month - Monday Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Month_Remaining_Mondays__c</fullName>
        <inlineHelpText>Partial Month.   Number of remaining Monday&apos;s left in the partial month.   This number will trigger the EPC task, calls and texts based on number of months remaining.  

Example If 1 is entered the EPC process for this month will start at week 4.</inlineHelpText>
        <label>Partial Month - Remaining Mondays</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyID__c</fullName>
        <label>PartyID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_Days_Used__c</fullName>
        <formula>IF( ISNULL(Total_Onsite_Purchased__c), 0, NULLVALUE(Onsite_Days_Used__c, 0) / Total_Onsite_Purchased__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days purchased minus total days logged as completed.    Will only adjust if days are logged.</inlineHelpText>
        <label>% of Days Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Coach_Call__c</fullName>
        <label>Performance Coach Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_EPC_Email__c</fullName>
        <label>Previous EPC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Previous_EPC__c</fullName>
        <label>Previous EPC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Process_Coach_Email__c</fullName>
        <label>Previous Process Coach Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Previous_Process_Coach__c</fullName>
        <label>Previous Process Coach</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Coach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Days_Remaining__c</fullName>
        <formula>Project_End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>Project_End_Date__c - Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <inlineHelpText>Date the project will end.   Used to cancel automated task and emails.</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>Day the project will start - Trigger for automated task and emails</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Miss__c</fullName>
        <label>Projected Miss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked project needs to be reassigned.</inlineHelpText>
        <label>Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (dn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Ratio__c</fullName>
        <label>Schedule Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_Ratio__c</fullName>
        <label>Show Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>20-Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Coach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TTS_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TTS Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Onsite_Purchased__c</fullName>
        <label>Onsite Days Purchased</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traver_Initial_Process_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked initial process tasks and emails will not trigger.</inlineHelpText>
        <label>Traver - Initial Process Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traver_Inside_Sales_Rep__c</fullName>
        <label>Traver Inside Sales Rep.</label>
        <picklist>
            <picklistValues>
                <fullName>Alayna Dufour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Ardelan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elly Whalen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Aerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael LaScola</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traver_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traver Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Traver_Services__c</fullName>
        <label>Traver Services</label>
        <picklist>
            <picklistValues>
                <fullName>20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Optimization University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boot Camp Seats</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked the monthly tasks, emails will not be created each month or the process will stop</inlineHelpText>
        <label>Traver - Monthly Task Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <formula>Account__r.Key_DOS__r.Manager.FirstName&amp;&quot; &quot;&amp; Account__r.Key_DOS__r.Manager.LastName</formula>
        <label>VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box Checked when welcome letter Task Completed</inlineHelpText>
        <label>Welcome Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger_Date__c</fullName>
        <formula>Workflow_Trigger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equals Date when Workflow trigger field is populated with date of first Monday of the month.</inlineHelpText>
        <label>Workflow Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger__c</fullName>
        <formula>DATE(YEAR(TODAY()), MONTH(TODAY()),
  CASE(MOD(DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE(1900, 1, 7), 7),
    0, 2,
    1, 1,
    2, 7,
    3, 6,
    4, 5,
    5, 4,
    6, 3,
  0)
)</formula>
        <label>Workflow Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X20_Group_Enrollment__c</fullName>
        <label>20 Group Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Pep__c</fullName>
        <label># of Courses in PEP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Users_on_PEP__c</fullName>
        <label>% of Users on PEP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pf_Appt_to_RO_s__c</fullName>
        <label>% pf Appt. to RO&apos;s</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Traver Project</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type__c</columns>
        <columns>Traver_Services__c</columns>
        <columns>Notes__c</columns>
        <columns>Lets_Get_Started__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type__c</columns>
        <columns>Traver_Services__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Traver# {00000}</displayFormat>
        <label>Traver Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traver Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_Traver_Req_CancelledSubstatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Project_Status__c, &quot;Cancelled&quot;), ISBLANK(TEXT(Cancelled_Substatus__c)))</errorConditionFormula>
        <errorDisplayField>Cancelled_Substatus__c</errorDisplayField>
        <errorMessage>Please enter value for Cancelled Substatus</errorMessage>
    </validationRules>
</CustomObject>